@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2016 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While
 ## 
 ## This file is part of GnuCOBOL.
@@ -106,7 +106,7 @@ AT_DATA([prog.cob], [
 ])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], ,
-[prog.cob: 9: Error: Level number of REDEFINES entry cannot be 66 or 88
+[prog.cob: 9: Error: syntax error, unexpected REDEFINES, expecting RENAMES
 ])
 
 AT_CLEANUP
@@ -127,7 +127,7 @@ AT_DATA([prog.cob], [
 ])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], ,
-[prog.cob: 8: Error: Level number of REDEFINES entry cannot be 66 or 88
+[prog.cob: 8: Error: syntax error, unexpected REDEFINES, expecting VALUE
 ])
 
 AT_CLEANUP
