@@ -1,3 +1,11 @@
+2016-07-27  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y, scanner.l: seperated 66-, 78- and 88-level handling from
+	  data_description, making it impossible to specify improper clauses.
+	* field.c: removed code made redundant by the above change.
+	* field.c, tree.h (cb_validate_renames_item): strengthened 66-level
+	  syntax checks.
+
 2016-07-24  Dave Pitts <dpitts@cozx.com>
 
 	* cobc.c: Additional picture information. TYPE field additions/changes.
